<resources>
    <string name="app_name">YStudio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bengali_story">Bengali Story</string>
    <string name="_18_523_subcribers">18,523 Subcribers</string>
    <string name="analytics">Analytics</string>
    <string name="last_28_days">Last 28 days</string>
    <string name="watch_time_minutes">Watch Time (minutes)</string>
    <string name="_2_5m">2.5M</string>
    <string name="views">Views</string>
    <string name="_133_6k">133.6K</string>
    <string name="subscriber_change">Subscriber change</string>
    <string name="_869">869+</string>
    <string name="your_estimated_revenue">Your estimated revenue</string>
    <string name="_0_00">$0.00</string>
    <string name="view_more">VIEW MORE</string>
    <string name="account">Account</string>
</resources>
