<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C6C6C6"
    tools:context=".fragments.DashboardFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp"
            android:elevation="@dimen/_10sdp"
            android:background="@color/colorWhite">
            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/ic_person"
                android:layout_gravity="center_vertical"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_15sdp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bengali_story"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_marginTop="@dimen/_2sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_18_523_subcribers"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_10sdp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_170sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp"
            android:background="@color/colorWhite">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/analytics"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold"/>
            <TextView
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/last_28_days"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_10sdp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:weightSum="3"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/watch_time_minutes"
                    android:textColor="@color/colorBlack"
                    android:gravity="start"
                    android:textSize="@dimen/_12sdp"/>
                <TextView
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_2_5m"
                    android:gravity="end"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_12sdp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3"
                android:layout_marginTop="@dimen/_8sdp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/views"
                    android:textColor="@color/colorBlack"
                    android:gravity="start"
                    android:textSize="@dimen/_12sdp"/>
                <TextView
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_133_6k"
                    android:gravity="end"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_12sdp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3"
                android:layout_marginTop="@dimen/_8sdp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/subscriber_change"
                    android:textColor="@color/colorBlack"
                    android:gravity="start"
                    android:textSize="@dimen/_12sdp"/>
                <TextView
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_869"
                    android:gravity="end"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_12sdp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3"
                android:layout_marginTop="@dimen/_8sdp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/your_estimated_revenue"
                    android:textColor="@color/colorBlack"
                    android:gravity="start"
                    android:textSize="@dimen/_12sdp"/>
                <TextView
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_0_00"
                    android:gravity="end"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_12sdp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:background="@color/colorWhite"
            android:padding="@dimen/_10sdp"
            android:elevation="@dimen/_10sdp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="@dimen/_12sdp"
                android:text="@string/view_more"
                android:gravity="center_vertical"
                android:textColor="@color/colorBlue"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>